<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/monday"
            android:textColor="@color/grey_500"/>
        <TextView
            android:id="@+id/tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/tuesday"
            android:textColor="@color/grey_500" />
        <TextView
            android:id="@+id/wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/wednesday"
            android:textColor="@color/grey_500" />
        <TextView
            android:id="@+id/thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/thursday"
            android:textColor="@color/grey_500" />
        <TextView
            android:id="@+id/friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/friday"
            android:textColor="@color/grey_500" />
        <TextView
            android:id="@+id/saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/saturday"
            android:textColor="@color/grey_500" />
        <TextView
            android:id="@+id/sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/sunday"
            android:textColor="@color/grey_500" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/entities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp"
            android:fadingEdgeLength="0dp"
            android:listSelector="@android:color/transparent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scrollbars="none"
            android:scrollingCache="false" />
        <ImageView
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:contentDescription="@string/image_description"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding"
            android:src="@drawable/schedule"/>
    </FrameLayout>
</LinearLayout>