<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:gravity="bottom"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:maxLength="25"
            android:minHeight="144dp"
            android:padding="@dimen/padding"
            android:textColorHint="@color/white_70"
            style="@style/Headline_White" />
        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/hint_location"
            android:inputType="textCapWords"
            android:maxLength="50"
            android:padding="@dimen/padding"
            android:textColorHint="@color/white_70"
            style="@style/Subhead_White"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/days_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/monday"
            android:textColor="@color/grey_500"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/divider_margin_2"
            android:layout_marginBottom="@dimen/divider_margin_2"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/tuesday"
            android:textColor="@color/grey_500" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/divider_margin_2"
            android:layout_marginBottom="@dimen/divider_margin_2"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/wednesday"
            android:textColor="@color/grey_500" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/divider_margin_2"
            android:layout_marginBottom="@dimen/divider_margin_2"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/thursday"
            android:textColor="@color/grey_500" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/divider_margin_2"
            android:layout_marginBottom="@dimen/divider_margin_2"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/friday"
            android:textColor="@color/grey_500" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/divider_margin_2"
            android:layout_marginBottom="@dimen/divider_margin_2"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/saturday"
            android:textColor="@color/grey_500" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/divider_margin_2"
            android:layout_marginBottom="@dimen/divider_margin_2"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:text="@string/sunday"
            android:textColor="@color/grey_500" />
    </LinearLayout>
    <TextView
        android:id="@+id/system_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:text="@string/start"
            style="@style/Caption_Black"/>
        <TextView
            android:id="@+id/start_instant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding"
            style="@style/Body1_Black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:text="@string/end"
            style="@style/Caption_Black"/>
        <TextView
            android:id="@+id/end_instant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding"
            style="@style/Body1_Black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:text="@string/description"
            style="@style/Caption_Black"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/padding"
            style="@style/Body1_Black"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/create_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/decline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:contentDescription="@string/image_description"
            android:padding="@dimen/padding"
            android:src="@drawable/decline" />
        <View
            android:layout_width="@dimen/divider_width"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/divider_margin"
            android:layout_marginBottom="@dimen/divider_margin"
            android:background="@android:color/white"/>
        <ImageView
            android:id="@+id/accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:contentDescription="@string/image_description"
            android:padding="@dimen/padding"
            android:src="@drawable/accept" />
    </LinearLayout>
</LinearLayout>